--- a/src/app/components/empleado-lis/empleado-lis.component.html
+++ b/src/app/components/empleado-lis/empleado-lis.component.html
@@ -1,12 +1,44 @@
 <div class="container mt-3">
   <div class="card">
     <div class="card-body">
-      inputs
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="sexo" id="todos" value="Masculino">
+        <label class="form-check-label" for="todos">Todos(5)</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="sexo" id="femenino" value="Femenino">
+        <label class="form-check-label" for="femenino">Femenino(5)</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="sexo" id="masculino" value="Masculino">
+        <label class="form-check-label" for="masculino">Masculino (2)</label>
+      </div>
     </div>
   </div>
   <div class="card mt-3">
     <div class="card-body">
-      tabla
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Legajo</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellido</th>
+            <th scope="col">Sexo</th>
+            <th scope="col">Salario</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td >1</td>
+            <td>Margarita</td>
+            <td>Alvarez</td>
+            <td>Femenino</td>
+            <td>25000</td>
+          </tr>
+
+
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
